@@ -14,39 +14,48 @@
  *********************************************************************************************************************/
 package org.github.errcat.domain.jdk;
 
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
 import org.github.errcat.domain.LogEvent;
-import org.github.errcat.domain.ThrowAwayEvent;
 import org.github.errcat.util.jdk.JdkUtil;
 
 /**
  * <p>
- * HEAP_REGIONS
+ * VM_ARGUMENTS
  * </p>
  * 
  * <p>
- * Heap information.
+ * VM arguments information.
  * </p>
  * 
  * <h3>Example Logging</h3>
  * 
  * <pre>
- * Heap Regions:
- * EU=empty-uncommitted, EC=empty-committed, R=regular, H=humongous start, HC=humongous continuation, CS=collection set, T=trash, P=pinned
- * BTE=bottom/top/end, U=used, T=TLAB allocs, G=GCLAB allocs, S=shared allocs, L=live data
- * R=root, CP=critical pins, TAMS=top-at-mark-start, UWM=update watermark
- * SN=alloc sequence number
- * |    0|CS |BTE    67a200000,    67a400000,    67a400000|TAMS    67a400000|UWM    67a400000|U  2048K|T  2047K|G     0B|S    56B|L 31152B|CP   0
+ * ***REMOVED***
+ * jvm_args: -D[Standalone] -verbose:gc -Xloggc:/path/to/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading -Xms4014m -Xmx5734m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=512m -Djava.net.preferIPv4Stack=true -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:+PerfDisableSharedMem -XX:+AlwaysPreTouch -XX:+ClassUnloadingWithConcurrentMark -XX:ShenandoahUnloadClassesFrequency=100 -XX:+MonitorInUseLists -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -XX:ParallelGCThreads=6 -Djava.util.concurrent.ForkJoinPool.common.parallelism=6 -XX:CICompilerCount=2 -XX:+ExitOnOutOfMemoryError -javaagent:/path/to/jolokia.jar=config=/path/to/jolokia.properties -javaagent:/path/to/appdynamics/javaagent.jar 
+ * java_command: /path/to/jboss-modules.jar -Djboss.home.dir=/path/to/standalone -Djboss.node.name=-nodename
+ * java_class_path (initial): /path/to/jboss-modules.jar:/path/to/jolokia.jar:/path/to/appdynamics/javaagent.jar
+ * ***REMOVED***
  * </pre>
  * 
  * @author <a href="mailto:mmillson@redhat.com">Mike Millson</a>
  * 
  */
-public class HeapRegionsEvent implements LogEvent, ThrowAwayEvent {
+public class VmArgumentsEvent implements LogEvent {
+
+    /**
+     * Regular expression for the header.
+     */
+    private static final String REGEX_HEADER = "***REMOVED***";
 
     /**
      * Regular expression defining the logging.
      */
-    private static final String REGEX = "^(BTE=|Heap Regions:|R=|ShenandoahBarrierSet|SN=|EU=|\\|)(.*)$";
+    private static final String REGEX = "^(" + REGEX_HEADER
+            + "|jvm_args: |java_command: |java_class_path \\(initial\\): |Launcher Type: )(.*)$";
+
+    private static Pattern pattern = Pattern.compile(REGEX);
 
     /**
      * The log entry for the event.
@@ -59,7 +68,7 @@ public class HeapRegionsEvent implements LogEvent, ThrowAwayEvent {
      * @param logEntry
      *            The log entry for the event.
      */
-    public HeapRegionsEvent(String logEntry) {
+    public VmArgumentsEvent(String logEntry) {
         this.logEntry = logEntry;
     ***REMOVED***
 
@@ -68,7 +77,7 @@ public class HeapRegionsEvent implements LogEvent, ThrowAwayEvent {
     ***REMOVED***
 
     public String getName() {
-        return JdkUtil.LogEventType.HEAP_REGIONS.toString();
+        return JdkUtil.LogEventType.VM_ARGUMENTS.toString();
     ***REMOVED***
 
     /**
@@ -80,5 +89,38 @@ public class HeapRegionsEvent implements LogEvent, ThrowAwayEvent {
      */
     public static final boolean match(String logLine) {
         return logLine.matches(REGEX);
+    ***REMOVED***
+
+    /**
+     * @return The value of the VM argument.
+     */
+    public String getValue() {
+        String value = null;
+        Matcher matcher = pattern.matcher(logEntry);
+        if (matcher.find()) {
+            value = matcher.group(2);
+        ***REMOVED***
+        return value;
+    ***REMOVED***
+
+    /**
+     * @return true if the log line is the header false otherwise.
+     */
+    public boolean isHeader() {
+        return logEntry.matches(REGEX_HEADER);
+    ***REMOVED***
+
+    /**
+     * @return True if the event is jvm_args, false otherwise.
+     */
+    public boolean isJvmArgs() {
+        return logEntry.matches("^jvm_args: .+$");
+    ***REMOVED***
+
+    /**
+     * @return True if the event is java_command, false otherwise.
+     */
+    public boolean isJavaCommand() {
+        return logEntry.matches("^java_command: .+$");
     ***REMOVED***
 ***REMOVED***
